--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       </section>
       <aside class="sidebar">
         <h2 class="section-title">Tags</h2>
-        <ul class="list tags">
+        <ul class="list tags" id="tagList">
           <li><a href="#">design</a> <span>(6)</span></li>
           <li><a href="#">code</a> <span>(5)</span></li>
           <li><a href="#">tutorials</a> <span>(4)</span></li>
@@ -221,27 +221,8 @@
           <li><a href="#">news</a> <span>(6)</span></li>
         </ul>
         <h2 class="section-title">Authors</h2>
-        <ul class="list authors">
-          <li>
-            <a href="#">
-              <span class="author-name">Kitty Toebean</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="author-name">Theo Tabby</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="author-name">George Tuxedo</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="author-name">MarionBerry</span>
-            </a>
-          </li>
+        <ul class="list authors" id="authList">
+
         </ul>
       </aside>
     </main>
