--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 	<meta charset="UTF-8">
 	<title>Kamień, papier, nożyce</title>
 	<link rel="stylesheet" href="css/style.scss">
+	<script id="template-article-link" type="text/x-handlebars-template">
+		<li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+	</script>
+	<script id="template-tag-link" type="text/x-handlebars-template">
+		<li><a href="#tag-{{ tag }}"><span>{{ tag }}({{ tagCount }})</span></a></li>
+	</script>
+	<script id="template-author-link" type="text/x-handlebars-template">
+		<li><a href="#author-{{ author }}"><span>{{ fullAuthor }}</span></a></li>
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
 </head>
 <body>
 <div class="blog">
